# ast-graph

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: tag-release.yml
crates/ast-graph-cli/: Cargo.toml
crates/ast-graph-cli/src/: git.rs  main.rs
crates/ast-graph-cli/src/commands/: blast_radius.rs  call_chain.rs  changed_symbols.rs  dead_code.rs  export.rs  hotspots.rs  mcp.rs  mod.rs  processes.rs  query.rs  routes.rs  scan.rs  search.rs  stats.rs  symbol.rs
crates/ast-graph-core/: Cargo.toml
crates/ast-graph-core/src/: graph.rs  hash.rs  lib.rs  query.rs  relation.rs  symbol.rs
crates/ast-graph-parse/: Cargo.toml
crates/ast-graph-parse/src/: extractor.rs  incremental.rs  lib.rs  parser.rs  routes.rs  routes_filebased.rs
crates/ast-graph-parse/src/lang/: csharp.rs  go.rs  java.rs  javascript.rs  mod.rs  php.rs  python.rs  rust.rs  swift.rs
crates/ast-graph-resolve/: Cargo.toml
crates/ast-graph-resolve/src/: lib.rs  mro.rs  processes.rs  resolver.rs
crates/ast-graph-storage/: Cargo.toml
crates/ast-graph-storage/src/: lib.rs  queries.rs  schema.rs  store.rs
crates/ast-graph-storage/src/falkor/: mod.rs
crates/ast-graph-storage/src/sqlite/: mod.rs  schema.rs
